# voice-bridge

./: .gitignore  Cargo.toml  README.md  credentials.example.toml
.github/workflows/: build.yml
src/: discord.rs  discord_audiohandler.rs  main.rs
src/ts_voice/: audio_to_ts.rs  mod.rs  ts_to_audio.rs
