[package]
name = "voice_bridge"
version = "0.1.0"
authors = ["Aron Heinecke <aron.heinecke@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

# pushing [f32] to [u8] and vice verca
byte-slice-cast = "1"

# tokio tracing from songbird
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

### TS stuff
audiopus = "0.2"
sdl2 = "0.34"
futures = "0.3"
# we use the ts slog stuff for the code copied
slog = "2"
slog-async = "2"
slog-perf = "0.2"
slog-term = "2"
slog-envlogger = "2"
# copied error handler
anyhow = "1"

tokio-stream = "0.1"

[dependencies.tsproto-packets]
git = "https://github.com/ReSpeak/tsclientlib"
rev = "3aa03661a2b9c62a6faf05e0f16a94e606c4fdb6"

[dependencies.tsclientlib]
git = "https://github.com/ReSpeak/tsclientlib"
#default-features = false
rev = "3aa03661a2b9c62a6faf05e0f16a94e606c4fdb6"

## discord specific

[dependencies.songbird]
version = "0.1"
features = ["driver","gateway"]

[dependencies.serenity]
version = "0.10"
features = ["client", "standard_framework", "voice","native_tls_backend"]

## tokio

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread","signal", "sync"]